[tool.poetry]
name = "langchain-web-qa"
version = "0.1.0"
description = ""
authors = ["Rahul V Ramesh <rahulvramesh@hotmail.com>"]
readme = "README.md"
packages = [{include = "langchain_web_qa"}]

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.13.0"
bs4 = "^0.0.1"
langchain = "^0.0.252"
loguru = "^0.7.0"
faiss-cpu = "^1.7.4"
openai = "^0.27.8"
tiktoken = "^0.4.0"
chromadb = "^0.4.5"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
